; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/broadcom-wl/src/extr_wlc.c_wlc_bssiovar.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/broadcom-wl/src/extr_wlc.c_wlc_bssiovar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SET = common dso_local global i32 0, align 4
@PARAM_TYPE = common dso_local global i32 0, align 4
@interface = common dso_local global i32 0, align 4
@vif = common dso_local global i32 0, align 4
@GET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i8*)* @wlc_bssiovar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wlc_bssiovar(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %7, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to i8**
  %14 = load i8*, i8** %13, align 8
  store i8* %14, i8** %8, align 8
  store i32 0, i32* %9, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @SET, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %31

19:                                               ; preds = %3
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @PARAM_TYPE, align 4
  %22 = and i32 %20, %21
  switch i32 %22, label %30 [
    i32 128, label %23
  ]

23:                                               ; preds = %19
  %24 = load i32, i32* @interface, align 4
  %25 = load i8*, i8** %8, align 8
  %26 = load i32, i32* @vif, align 4
  %27 = load i32*, i32** %7, align 8
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @wl_bssiovar_setint(i32 %24, i8* %25, i32 %26, i32 %28)
  store i32 %29, i32* %9, align 4
  br label %30

30:                                               ; preds = %23, %19
  br label %31

31:                                               ; preds = %30, %3
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* @GET, align 4
  %34 = and i32 %32, %33
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %47

36:                                               ; preds = %31
  %37 = load i32, i32* %4, align 4
  %38 = load i32, i32* @PARAM_TYPE, align 4
  %39 = and i32 %37, %38
  switch i32 %39, label %46 [
    i32 128, label %40
  ]

40:                                               ; preds = %36
  %41 = load i32, i32* @interface, align 4
  %42 = load i8*, i8** %8, align 8
  %43 = load i32, i32* @vif, align 4
  %44 = load i32*, i32** %7, align 8
  %45 = call i32 @wl_bssiovar_get(i32 %41, i8* %42, i32 %43, i32* %44, i32 4)
  store i32 %45, i32* %9, align 4
  br label %46

46:                                               ; preds = %40, %36
  br label %47

47:                                               ; preds = %46, %31
  %48 = load i32, i32* %9, align 4
  ret i32 %48
}

declare dso_local i32 @wl_bssiovar_setint(i32, i8*, i32, i32) #1

declare dso_local i32 @wl_bssiovar_get(i32, i8*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
